--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
-{
-  "dependencies": {
-    "dotenv": "^17.3.1",
-    "express": "^5.2.1",
-    "mongoose": "^9.2.2"
-  }
+"dependencies": {
+  "cors": "^2.8.5",
+  "express": "^4.18.2",
+  "mongoose": "^7.0.0"
 }
