--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
-"dependencies": {
-  "cors": "^2.8.5",
-  "express": "^4.18.2",
-  "mongoose": "^7.0.0"
+{
+  "name": "agro-direct",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.0"
+  }
 }
